--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     </scm>
 
     <properties>
-        <confluent.version>2.1.0-SNAPSHOT</confluent.version>
+        <confluent.version>2.0.0</confluent.version>
         <kafka.version>0.9.0.0</kafka.version>
         <junit.version>4.12</junit.version>
         <easymock.version>3.0</easymock.version>
